--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,23 @@
 # Vim tmp files
 *.swp
 
-# Build directory
-*build/
-*out/
-*.vs/
+#for qt
+CMakeLists.txt.user
+# for cmake
+CMakeCache.txt
+CMakeFiles
+# Makefile     this should be commented because we have Makefile in sh folder
+cmake_install.cmake
+install_manifest.txt
+
+# Executables
+*.exe
+*.out
+*.app
+/.vs
+/out
+/CMakeSettings.json
+
+# for vscode
+.vscode/
+build/
